# reflexbidaia

./: .gitignore  compose.yml  main.py  pyproject.toml  requirements.txt  rxconfig.py  web.Dockerfile
assets/: styles.css
reflex_viaje/: reflex_viaje.py
reflex_viaje/api/: api.py  auth.py
reflex_viaje/components/: footer.py  navbar.py
reflex_viaje/layouts/: layout_base.py
reflex_viaje/layouts/protected/: protected_routes.py
reflex_viaje/navigation/: routes.py  state.py
reflex_viaje/pages/: diacinco.py  diacuatro.py  diados.py  diatres.py  diauno.py  fotosdestinos.py  fotosviaje.py  gastos.py  index.py
reflex_viaje/pages/auth/: login.py
reflex_viaje/utils/: utils.py
