[project]
name = "reflex-viaje"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
    "reflex>=0.8.28.post1",
    "supabase>=2.31.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
